feature: bylaws crud